# ExoPulse_firmware

./: .gitignore  .gitmodules  ACCELERATION_DATA_FLOW_REPORT.md  BUILD_REPORT.md  CLAUDE.md  ESP_RMD_Driver_loopback_test.ino  GUI_GUIDE.md  HANDOFF.md  QUICK_START_WIFI.md  README.md  README_PRO.md  TCP_DEMO_DEBUG.md  WIFI_MOTOR_GUIDE.md  ads1256_plotter.py  create_presentation.py  gui.py  include  launch.sh  platformio.ini  requirements.txt  send_set_zero.py  src  sto_reader.py  test_cal_full.py  test_cal_m1.py  test_calibration.py  test_exo_tcp_client.py  test_reset_motor1.py  test_serial_vs_wifi.py
.claude/: .fuse_hidden0000345200000004
EMG/: README.md  umyo_plotter_gui.py
EMG/uMyo/nrf52840_dongle_receiver/zephyr_cdc/: CMakeLists.txt  nrf52840dongle_nrf52840.overlay  prj.conf
EMG/uMyo/nrf52840_dongle_receiver/zephyr_cdc/src/: main.c
EMG/uMyo/nrf52840_dongle_receiver/zephyr_cdc/src/urf_lib/: urf_radio.c  urf_star_protocol.c  urf_timer.c
MGv2/: COMPREHENSIVE_DOCUMENTATION.md  DEPLOYMENT_CHECKLIST.md  ENCODER_14BIT_TO_18BIT_UPDATE.md  HARDWARE_TEST_GUIDE.md  PROJECT_ANALYSIS_REPORT.md  QUICK_START_UBUNTU.md  README.md
RMD_motor_legacy/: README.md
UI_components/: README.md  WIFI_PAIRING_STATUS.md  auto_wifi_setup.py  can_plotter.py  check_serial.py  exo_data_viewer.py  motor_control.py  motor_monitor.py  motor_serial_control.py  send_wifi_config.py  serial_reader.py  simple_test.py  test_bidirectional.py  test_wifi_connection.py  test_wifi_flow.py  torque_serial_control.py  wifi_dual_motor_plotter.py  wifi_monitor.py
ble_scanner/: platformio.ini
(+124 files in other folders)
